[tool.poetry]
name = "urmqtt"
version = "0.11.0-beta1"
description = "MQTT client/broker using Python asyncio"
authors = ["urmqtt Contributers"]
license = "MIT"
homepage = "https://github.com/Yakifo/urmqtt"
classifiers = [
        "Development Status :: 3 - Alpha",
        "Intended Audience :: Developers",
        "Operating System :: POSIX",
        "Operating System :: MacOS",
        "Operating System :: Microsoft :: Windows",
        "Topic :: Communications",
        "Topic :: Internet",
]
packages = [
    { include = "urmqtt" },
]

[tool.poetry.dependencies]
python = "^3.7"
transitions = "^0.8.0"
websockets = ">=9.0,<11.0"
passlib = "^1.7.0"
docopt = "^0.6.0"
PyYAML = ">=5.4.0,<7.0"
coveralls = {version = "^3.0.1", optional = true}

[tool.poetry.extras]
ci = ["coveralls"]

[tool.poetry.dev-dependencies]
pytest = "^6.2.2"
pytest-cov = "^2.11.1"
pytest-asyncio = "^0.14.0"
asyncmock = "^0.4.0"
mypy = "^0.812"
pylint = "^2.7.2"
black = "^21.10b0"
flake8 = "^3.9.0"
hypothesis = "^6.10.0"
pytest-logdog = "^0.1.0"
psutil = "^5.9.0"

[tool.poetry.scripts]
urmqtt = 'urmqtt.scripts.broker_script:main'
urmqtt_pub = 'urmqtt.scripts.pub_script:main'
urmqtt_sub = 'urmqtt.scripts.sub_script:main'

[tool.poetry.plugins]

[tool.poetry.plugins."urmqtt.test.plugins"]
"test_plugin" = "tests.plugins.test_manager:EmptyTestPlugin"
"event_plugin" = "tests.plugins.test_manager:EventTestPlugin"
"packet_logger_plugin" = "urmqtt.plugins.logging:PacketLoggerPlugin"

[tool.poetry.plugins."urmqtt.broker.plugins"]
"event_logger_plugin" = "urmqtt.plugins.logging:EventLoggerPlugin"
"packet_logger_plugin" = "urmqtt.plugins.logging:PacketLoggerPlugin"
"auth_anonymous" = "urmqtt.plugins.authentication:AnonymousAuthPlugin"
"auth_file" = "urmqtt.plugins.authentication:FileAuthPlugin"
"topic_taboo" = "urmqtt.plugins.topic_checking:TopicTabooPlugin"
"topic_acl" = "urmqtt.plugins.topic_checking:TopicAccessControlListPlugin"
"broker_sys" = "urmqtt.plugins.sys.broker:BrokerSysPlugin"


[tool.poetry.plugins."urmqtt.client.plugins"]
"packet_logger_plugin" = "urmqtt.plugins.logging:PacketLoggerPlugin"



[tool.pdm]
[tool.pdm.dev-dependencies]
dev = [
    "pytest<7.0.0,>=6.2.2",
    "pytest-cov<3.0.0,>=2.11.1",
    "pytest-asyncio<1.0.0,>=0.14.0",
    "asyncmock<1.0.0,>=0.4.0",
    "mypy<1.0,>=0.812",
    "pylint<3.0.0,>=2.7.2",
    "black<22.0,>=21.10b0",
    "flake8<4.0.0,>=3.9.0",
    "hypothesis<7.0.0,>=6.10.0",
    "pytest-logdog<1.0.0,>=0.1.0",
    "psutil<6.0.0,>=5.9.0",
]

[tool.pdm.build]
includes = ["urmqtt"]
[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[project]
name = "urmqtt"
version = "0.11.0-beta1"
description = "MQTT client/broker using Python asyncio"
authors = [
    {name = "Party4Bread", email = "party4bread@gmail.com"},
    {name = "urmqtt Contributers"},
]
dependencies = [
    "transitions<1.0.0,>=0.8.0",
    "websockets<11.0,>=9.0",
    "passlib<2.0.0,>=1.7.0",
    "docopt<1.0.0,>=0.6.0",
    "PyYAML<7.0,>=5.4.0",
    "lupa>=2.0",
    "watchfiles>=0.19.0",
]
requires-python = ">=3.7,<4.0"
license = {text = "MIT"}
classifiers = ["Development Status :: 3 - Alpha", "Intended Audience :: Developers", "Operating System :: POSIX", "Operating System :: MacOS", "Operating System :: Microsoft :: Windows", "Topic :: Communications", "Topic :: Internet"]

[project.urls]
homepage = "https://github.com/Party4Bread/urmqtt"

[project.entry-points]
[project.entry-points."urmqtt.test.plugins"]
test_plugin = "tests.plugins.test_manager:EmptyTestPlugin"
event_plugin = "tests.plugins.test_manager:EventTestPlugin"
packet_logger_plugin = "urmqtt.plugins.logging:PacketLoggerPlugin"

[project.entry-points."urmqtt.broker.plugins"]
event_logger_plugin = "urmqtt.plugins.logging:EventLoggerPlugin"
packet_logger_plugin = "urmqtt.plugins.logging:PacketLoggerPlugin"
auth_anonymous = "urmqtt.plugins.authentication:AnonymousAuthPlugin"
auth_file = "urmqtt.plugins.authentication:FileAuthPlugin"
topic_taboo = "urmqtt.plugins.topic_checking:TopicTabooPlugin"
topic_acl = "urmqtt.plugins.topic_checking:TopicAccessControlListPlugin"
broker_sys = "urmqtt.plugins.sys.broker:BrokerSysPlugin"

[project.entry-points."urmqtt.client.plugins"]
packet_logger_plugin = "urmqtt.plugins.logging:PacketLoggerPlugin"

[project.optional-dependencies]
ci = ["coveralls<4.0.0,>=3.0.1"]

[project.scripts]
urmqtt = "urmqtt.scripts.broker_script:main"
urmqtt_pub = "urmqtt.scripts.pub_script:main"
urmqtt_sub = "urmqtt.scripts.sub_script:main"
